--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
   }
 
   &__go-up {
+    z-index: 10;
     position: fixed;
     transition: all 0.2s ease;
 
@@ -26,6 +27,10 @@
     padding: 6px;
     border-radius: 50%;
     background-color: #fff;
+
+    & div {
+      cursor: pointer;
+    }
 
     &:hover {
       background-color: #e6e5e5;
