--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   height: 100vh;
   width: 100%;
-  padding-top: 20px;
+  // padding-top: 30px;
   background-image: url(../../images/header-bg.png);
   background-position: 60% 0;
   background-size: cover;
