--- a/src/components/PriceCard/PriceCard.module.scss
+++ b/src/components/PriceCard/PriceCard.module.scss
@@ -1,26 +1,40 @@
 .price-card {
   transition: all 0.2s ease;
   padding: 30px;
-  border: 2px solid #202124;
+  border: 1px solid #757859;
   border-radius: 10px;
   width: 230px;
-  background-color: $yellow-dark;
+  background-color: #3c3f268a;
   color: $white-color;
-  box-shadow: 0px 0px 7px 1px rgb(0, 0, 0);
-
 
   &:hover {
     transform: scale(1.03);
-    background-color: #25251e;
+    background-color: #282812;
     border: 1px solid $main-yellow-color;
   }
 
+  &--rec {
+    border: 1px solid #a59e22;
+    box-shadow: 0px 0px 20px 1px $main-yellow-color;
+    transform: scale(1.1);
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
   &__btn {
+    transition: background-color 0.2s ease;
     padding-block: 7px;
     border: none;
-    background-color: $dark-gray-yellow;
+    background-color: transparent;
     border-radius: 10px;
+    border: 1px solid $main-yellow-color;
     color: #fff;
+
+    &:hover {
+      background-color: $main-yellow-color;
+    }
   }
 
   &__chech-icon {
