--- a/src/components/Prices/Prices.module.scss
+++ b/src/components/Prices/Prices.module.scss
@@ -1,6 +1,29 @@
 .prices {
-  background-color: $white-color;
+  background-color: $yellow-dark;
   padding-block: 40px;
-  color: $yellow-dark ; 
-  // box-shadow: 0px 0px 20px 5px $white-color;
+  color: #fff;
+  border-top: 1px solid #535353;
+  border-bottom: 1px solid #535353;
+
+  position: relative;
+
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    box-shadow: 0px 0px 700px 200px #acb4381f;
+    z-index: 1;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 20%;
+    right: 20%;
+    box-shadow: 0px 0px 700px 200px #8e95301f;
+    z-index: 1;
+  }
+
 }
