added a new section

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @import './components/Services/Services.module.scss';
 @import './components/Prices/Prices.module.scss';
 @import './components/PriceCard/PriceCard.module.scss';
+@import './components/ServicesDetails/ServicesDetails.module.scss';
 
 * {
   font-family: "Rubik", sans-serif;
