--- a/src/components/PriceCard/PriceCard.module.scss
+++ b/src/components/PriceCard/PriceCard.module.scss
@@ -3,8 +3,9 @@
   padding: 30px;
   border: 1px solid #3d3920;
   border-radius: 10px;
-  width: 230px;
+  width: 350px;
   background-color: #1d1a07;
+  justify-content: space-between;
   color: $white-color;
 
   &:hover {
@@ -32,17 +33,34 @@
     }
   }
 
-  &__chech-icon {
-    height: 15px;
-    width: 15px;
-    background-image: url(../../images/icons/check-mark.png);
-    background-size: cover;
+
+
+  &__description {
+    position: relative;
+  }
+
+  &__content {
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
   }
 
   &__item-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
+    padding-left: 25px;
+    position: relative;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 2px;
+      height: 15px;
+      width: 15px;
+      background-image: url('../../images/icons/check-mark.png');
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
   }
 }
