--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -17,7 +17,7 @@
     bottom: 15%;
     right: 50%;
     box-shadow: 0px 0px 700px 200px #8e95301f;
-     z-index: 1;
+    z-index: 1;
   }
 
   &__container {
@@ -35,18 +35,17 @@
     color: #fff;
     border: 1px solid $main-yellow-color;
     border-radius: 15px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
     padding: 20px 30px;
 
+    &__top {
+      min-height: 250px;
+    }
+
     &:hover {
-      transform: scale(1.05);
+      opacity: 0.9;
     }
   }
+
 
   &__icon {
     height: 120px;
@@ -63,12 +62,71 @@
   &__title-block {
     font-size: 20px;
     text-align: center;
-    color: #ded7bbff;
+    color: #f7fbe4;
   }
 
   &__description {
     font-size: 10px;
     color: #929691;
     text-align: center;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  
+    & p {
+      padding-left: 25px;
+      position: relative;
+      color: #f7fbe4;
+      margin: 0;
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 2px;
+        height: 15px;
+        width: 15px;
+        background-image: url('../../images/icons/check-mark.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    }
+  }
+
+  &__price {
+    font-size: 25px;
+    text-align: center;
+    padding: 15px 0px;
+  }
+
+  &__link {
+    cursor: pointer;
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 15px;
+    transition: color 0.2s ease;
+
+    &:hover {
+     color:  $main-yellow-color;
+    }
+  }
+
+  &__btn {
+    transition: background-color 0.2s ease;
+    padding-block: 7px;
+    border: none;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 1px solid #c8b685;
+    color: #f7fbe4;
+
+    &:hover {
+      background-color: $main-yellow-color;
+    }
   }
 }
