--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -50,6 +50,19 @@
     background-image: url('../images/icons/check-mark.png');
   }
 
+  &--prem {
+    background-size: cover;
+    background-image: url('../images/icons/prem-icon.png');
+  }
+  &-- {
+    background-image: url('../images/icons');
+  }
+  &-- {
+    background-image: url('../images/icons');
+  }
+  &-- {
+    background-image: url('../images/icons');
+  }
   &-- {
     background-image: url('../images/icons');
   }
