add footer to page

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@
 @import './components/PriceCard/PriceCard.module.scss';
 @import './components/ServicesDetails/ServicesDetails.module.scss';
 @import './components/Contacts/Contacts.module.scss';
+@import './components/Footer/footer.module.scss';
 
 * {
   font-family: "Rubik", sans-serif;
