--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     background-color: $yellow-dark;
-    padding-block: 50px;
+    padding-top: 50px;
     box-shadow: 0px -20px 40px 15px $yellow-dark;
   }
 
