--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,8 @@
 $main-yellow-color: #c7c276;
 $text-color: #8d8264;
 $yellow-dark: #222014;
-$yellow-light: #f9faf4;
+$yellow-light: #fbfdf0;
+$yellow-light-2: #e1e5cb;
 $button-color: #535353;
 $white-color: #edecec;
 $dark-gray-yellow: #9a8343;
