added PrivacyPolicy component, added new mixin and added animation to page

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -24,6 +24,7 @@
   &__link {
     font-weight: 600;
     transition: color 0.2s ease;
+    cursor: pointer;
 
     &:hover {
       color: #f0e68c;
