--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -21,18 +21,10 @@
   }
 
   &__link {
-    transition: background-color 0.2s ease;
     padding: 4px 12px;
-    border: none;
-    background-color: transparent;
-    border-radius: 10px;
-    border: 1px solid #c8b685;
-    color: #f7fbe4;
     text-decoration: none;
     font-size: 14px;
 
-    &:hover {
-      background-color: $main-yellow-color;
-    }
+    @include button();
   }
 }
