--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,17 +19,7 @@
   }
 
   &__button {
-    transition: all 0.2s ease;
-    border: 2px solid $main-yellow-color;
-    color: $main-yellow-color;
-    border-radius: 30px;
-    background-color: #ffffff10;
+    @include button();
     width: 250px;
-
-    &:hover {
-      background-color: $main-yellow-color;
-      color: #fff;
-      box-shadow: 0px 0px 4px 1px #ffffff84;
-    }
   }
 }
