--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+// Импортируем AOS и его стили
+@import "aos/dist/aos.css";
+
+
 
 @import './styles/variables.scss';
 @import './styles/icon.scss';
@@ -11,11 +15,12 @@
 @import './components/Menu/Menu.module.scss';
 @import './components/ChangeLanguage/ChangeLanguage.module.scss';
 @import './components/Services/Services.module.scss';
-@import './components/Prices/Prices.module.scss';
-@import './components/PriceCard/PriceCard.module.scss';
 @import './components/ServicesDetails/ServicesDetails.module.scss';
 @import './components/Contacts/Contacts.module.scss';
 @import './components/Footer/footer.module.scss';
+@import './components/PrivacyPolicy/PrivacyPolicy.module.scss';
+
+
 
 * {
   font-family: "Rubik", sans-serif;
@@ -27,11 +32,16 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   min-width: 380px;
   scroll-behavior: smooth;
+}
 
-  &:has(.menu:target) {
-    overflow: hidden;
-  }
+body.menu-open {
+  overflow: hidden;
 }
