added swiper to page

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@
 @import './components/Contacts/Contacts.module.scss';
 @import './components/Footer/footer.module.scss';
 @import './components/PrivacyPolicy/PrivacyPolicy.module.scss';
+@import './components/Slider/AutoSelectionSlider.module.scss';
 
 
 
