fix bg and colors

--- a/src/components/ServicesDetails/ServicesDetails.module.scss
+++ b/src/components/ServicesDetails/ServicesDetails.module.scss
@@ -4,8 +4,8 @@
   &__container {
     background: linear-gradient(180deg,
       $yellow-dark 0%,
-      #181913 10%,
-      #19170d 90%,
+      #1a1c12 10%,
+      #1b190e 90%,
       $yellow-dark 100%);
 
     padding: 20px;
