--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$main-yellow-color: #c7c276;
+$main-yellow-color: #aba560;
 $text-color: #8d8264;
-$yellow-dark: #222014;
+$yellow-dark: #1c1a10;
 $yellow-light: #fbfdf0;
 $yellow-light-2: #e1e5cb;
 $button-color: #535353;
@@ -8,5 +8,5 @@ $white-color: #edecec;
 $dark-gray-yellow: #9a8343;
 $sub-title: #9a9a9a;
 $highlight-color: #b6bb9c;
-$title-color: #e5c053;
+$title-color: #d4b24c;
 $grey-text-color: #cfcfcf;
