--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,7 @@
 .header {
   height: 100vh;
   width: 100%;
-  // padding-top: 30px;
-  background-image: url(../../images/header-bg.png);
+  background-image: url(../../images/header-bg.jpg);
   background-position: 60% 0;
   background-size: cover;
 
