--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   height: 100vh;
   width: 100%;
-  background-image: url(../../images/header-bg.jpg);
+  background-image: url(../../images/header-bg.jpeg);
   background-position: 60% 0;
   background-size: cover;
 
