--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,15 +1,15 @@
 .footer {
   background: linear-gradient(180deg,
-      $yellow-dark 0%,
-      #181913 40%,
-      #19170d 100%);
+    $bg-section 0%,
+      
+      #d0d0d0 100%);
 
   &__title {
-    color: $title-color;
+    color: $dark-text-color;
   }
 
   &__main-color {
-    color: $grey-text-color;
+    color: $text-grey;
   }
 
   &__hr {
@@ -17,7 +17,7 @@
     height: 1px;
     background: linear-gradient(90deg,
         transparent,
-        rgba(240, 230, 140, 0.825),
+        $text-grey,
         transparent);
   }
 
@@ -27,13 +27,13 @@
     cursor: pointer;
 
     &:hover {
-      color: #f0e68c;
+      color: #757575;
       text-shadow: 0 0 6px rgba(240, 230, 140, 0.25);
     }
   }
 
   &__highlight {
-    color: $highlight-color;
+    color: $yellowe-color;
   }
 
   &__main-text {
@@ -42,6 +42,6 @@
 
   &__sub-title {
     font-size: 16px;
-    color: $sub-title;
+    color: $dark-text-color;
   }
 }
