--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   background-size: cover;
 
   &__top-bat-bg {
-    background-color: #cdcccc;
+    background-color: #f0f0f0;
   }
    @media (min-width: 740px) {
       background-position: 60% 0;
