--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,9 +12,12 @@ $title-color: #d4b24c;
 $grey-text-color: #cfcfcf;
 
 //New colors
-$main-grey: #cdcccc;
+$main-grey: #c4c4c4;
 $dark-text-color: #1e1701;
-$top-bat-text: #3f4247;
+$subtitle: #3f4247;
+$light-grey: #e9e9e9c6;
+$text-grey: #696969c6;
 $yellowe-color: #eab308;
+$yellowe-light: #f4d372;
 $yellowe-hover-color: #eab208c6;
 $bg-section: #f9fafb;
