--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -3,28 +3,56 @@
     color: #e5c053;
   }
 
+
   &__block {
     transition: all 0.2s ease;
-    background-color: #11120dc6;
-    color: #fff;
-    border: 1px solid $main-yellow-color;
+    background-color: #ffffff;
+    border: 1px solid #cfcfcf;
+    box-shadow: 0px 0px 10px #acacac62;
     border-radius: 15px;
-    padding: 20px 30px;
-    box-shadow: 0 0 10px 1px #e0d88880 inset;
+    padding: 25px 30px;
+  }
+
+  &__icon-block {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border-radius: 50%;
+    background-color: #fdf7e6;
+
   }
 
   &__icon {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
   &__link {
-    padding: 4px 12px;
+    width: fit-content;
+    padding: 5px 20px;
     text-decoration: none;
     font-size: 14px;
 
-    @include button();
+    color: $text-grey;
+    font-weight: 700;
+    text-align: center;
+    border: 1px solid $text-grey;
+    background-color: transparent;
+    border-radius: 15px;
+
+    transition: background 0.2s ease;
+
+    &:hover {
+      background: $light-grey;
+    }
+  }
+
+  & p {
+    font-weight: 400;
+    color: $dark-text-color;
   }
 }
