--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -2,22 +2,11 @@
   padding-inline: 20px;
   position: relative;
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 10%;
-    left: 70%;
-    box-shadow: 0px 0px 700px 200px #acb4381f;
-    z-index: 1;
-  }
-
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 15%;
-    right: 50%;
-    box-shadow: 0px 0px 700px 200px #8e95301f;
-    z-index: 1;
+  &__hr {
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #ccc;
   }
 
   &__container {
@@ -31,11 +20,32 @@
 
   &__block {
     transition: all 0.2s ease;
-    background-color: #11120dc6;
+    background-color: #ffffff;
     color: #fff;
-    border: 1px solid $main-yellow-color;
-    border-radius: 8px;
-    padding: 15px 20px;
+    border: 1px solid #cfcfcf;
+    box-shadow: 0px 0px 10px #acacac62;
+    border-radius: 15px;
+    padding: 25px;
+
+    &--recomended {
+      border: 1px solid $yellowe-color;
+      box-shadow: 0px 0px 4px $yellowe-light;
+      position: relative;
+
+      &__type {
+        position: absolute;
+        height: 26px;
+        top: -13px;
+        left: 30px;
+        font-size: 14px;
+        line-height: 26px;
+        padding-inline: 10px;
+        color: $dark-text-color;
+        font-weight: 700;
+        background-color: $yellowe-color;
+        border-radius: 20px;
+      }
+    }
 
     &:hover {
       opacity: 0.9;
@@ -44,15 +54,26 @@
 
   &__description {
     margin: 0;
-    margin-block: 5px;
     font-size: 14px;
+    font-weight: 400;
+    color:#4f4f4fd7;
+
   }
 
+  &__icon-block {
+    background-color: #fdf7e6;
+    padding: 10px;
+    border-radius: 10px;
+
+    &--recomended {
+      background-color: $yellowe-color;
+    }
+  }
 
   &__icon {
     flex-shrink: 0;
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -64,7 +85,7 @@
 
   &__title-block {
     font-size: 20px;
-    color: #f7fbe4;
+    color: $dark-text-color;
     margin: 0;
   }
 
@@ -95,17 +116,26 @@
     }
   }
 
-  &__price {
-    font-size: 18px;
+  &__price-block {
+    font-size: 14px;
+    font-weight: 400;
+    color: $text-grey;
+  }
 
-    &>span {
-      color: $main-yellow-color;
-    }
+  &__price {
+    color: $yellowe-color;
+    font-size: 20px;
+  }
+
+  &__bargain {
+    font-size: 14px;
+     font-weight: 400;
+    color: $text-grey;
   }
 
   &__link {
     cursor: pointer;
-    color: #fff;
+    color: $dark-text-color;
     text-decoration: none;
     transition: color 0.2s ease;
 
