--- a/src/index.scss
+++ b/src/index.scss
@@ -48,21 +48,27 @@ body.menu-open {
 }
 
 .title {
-   color: $dark-text-color;
-   font-size: 30px;
-   font-weight: 700;
-   position: relative;
-   padding-bottom: 15px;
+  color: $dark-text-color;
+  font-size: 30px !important;
+  font-weight: 700;
+  position: relative;
+  padding-bottom: 12px;
+  margin: 0;
 
   &--underline {
-     &::after {
-    content: '';
-    position: absolute;
-    bottom: 0px;
-    left: calc(50% - 60px);
-    width: 120px;
-    height: 6px;
-    background-color: $yellowe-color;
-   }
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0px;
+      left: calc(50% - 60px);
+      width: 120px;
+      height: 4px;
+      background-color: $yellowe-color;
+    }
   }
+}
+
+.subtitle {
+  color: $subtitle;
+  font-size: 15px;
 }
