--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   background: linear-gradient(180deg,
-    $bg-section 0%,
-      
+      $bg-section 0%,
+
       #d0d0d0 100%);
 
   &__title {
@@ -33,7 +33,7 @@
   }
 
   &__highlight {
-    color: $yellowe-color;
+    color: $yellow-color;
   }
 
   &__main-text {
