--- a/src/components/ServicesDetails/ServicesDetails.module.scss
+++ b/src/components/ServicesDetails/ServicesDetails.module.scss
@@ -53,7 +53,7 @@
   &__salesman-info {
     & span {
       font-size: 28px;
-      color: $yellowe-color;
+      color: $yellow-color;
       font-weight: 300;
     }
 
