--- a/src/index.scss
+++ b/src/index.scss
@@ -63,7 +63,7 @@ body.menu-open {
       left: calc(50% - 60px);
       width: 120px;
       height: 4px;
-      background-color: $yellowe-color;
+      background-color: $yellow-color;
     }
   }
 }
