--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,23 +1,9 @@
-$main-yellow-color: #aba560;
-$text-color: #8d8264;
-$yellow-dark: #1c1a10;
-$yellow-light: #fbfdf0;
-$yellow-light-2: #e1e5cb;
-$button-color: #535353;
-$white-color: #edecec;
-$dark-gray-yellow: #9a8343;
-$sub-title: #9a9a9a;
-$highlight-color: #b6bb9c;
-$title-color: #d4b24c;
-$grey-text-color: #cfcfcf;
-
-//New colors
 $main-grey: #c4c4c4;
 $dark-text-color: #1e1701;
 $subtitle: #3f4247;
 $light-grey: #e9e9e9c6;
 $text-grey: #696969c6;
-$yellowe-color: #eab308;
-$yellowe-light: #f4d372;
-$yellowe-hover-color: #eab208c6;
+$yellow-color: #eab308;
+$yellow-light: #f4d372;
+$yellow-hover-color: #eab208c6;
 $bg-section: #f9fafb;
