--- a/src/components/Slider/AutoSelectionSlider.module.scss
+++ b/src/components/Slider/AutoSelectionSlider.module.scss
@@ -30,7 +30,7 @@
   padding: 32px;
   background-color: #e9e9e9c6;
   color: #fff;
-  border: 1px solid $main-yellow-color;
+  border: 1px solid $yellow-color;
   border-radius: 22px;
 
   display: flex;
@@ -50,7 +50,7 @@
   font-size: 14px;
   opacity: 0.8;
   line-height: 1.4;
-   color: $subtitle;
+  color: $subtitle;
 }
 
 /* Центр и blur соседних */
@@ -67,7 +67,7 @@
 
 .swiper-slide-active .slide-card {
   box-shadow: 0 0 10px #eab20858;
-  border-color: $yellowe-color;
+  border-color: $yellow-color;
 }
 
 /* Pagination точки */
@@ -77,7 +77,7 @@
 }
 
 .swiper-pagination-bullet-active {
-  background: $yellowe-color!important;
+  background: $yellow-color !important;
 
 }
 
@@ -89,7 +89,7 @@
   align-items: center;
   color: #ffd66b !important;
   background-color: #00000084;
-  
+
   padding: 10px;
   border-radius: 50%;
   transition: all 0.3s;
