--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,13 +2,13 @@
   transition: all 0.2s ease;
   border: none;
   // border: $borderWid solid $main-yellow-color;
-  color:$dark-text-color;
+  color: $dark-text-color;
   border-radius: $borderRad;
   // background-color: #ffffff10;
-  background-color: $yellowe-color;
+  background-color: $yellow-color;
 
   &:hover {
-    background-color: $yellowe-hover-color;
+    background-color: $yellow-hover-color;
   }
 }
 
