--- a/src/components/Slider/AutoSelectionSlider.module.scss
+++ b/src/components/Slider/AutoSelectionSlider.module.scss
@@ -87,8 +87,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #ffd66b !important;
-  background-color: #00000084;
+  color: $yellow-hover-color !important;
 
   padding: 10px;
   border-radius: 50%;
